fix: Roll back JVM argument `--sun-misc-unsafe-memory-access=allow`, add `-XX:+UseZGenerational`. Use Java 24 by default.